# uwsgi-readiness-check

./: Dockerfile  LICENSE  Makefile  README.md  setup.cfg  skaffold.yaml
.github/workflows/: python-package.yaml
k8s/: deployment.yaml
src/k8s_uwsgi/: __init__.py  pod_utils.py
tests/: app.py  request.py  test_fake.py  uwsgi.ini
