[metadata]
name = uwsgi-readiness-check
version = 0.0.1
description='Readiness Check for uWSGI'
author='Filipe Niero Felisbino'
author_email='filipenf@gmail.com'
url='https://github.com/filipenf/uwsgi-readiness-check'

[options]
package_dir=
    =src
packages = find:
install_requires =
    requests
    argparse
    importlib; python_version == "2.6"

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    uwsgi-shutdown = k8s_uwsgi:shutdown
    uwsgi-is-ready = k8s_uwsgi:is_ready
